--- a/staff.html
+++ b/staff.html
@@ -9,7 +9,10 @@
     <div class="container staff-page">
         <header>
             <h1>Staff Control Panel</h1>
-            <button id="shuffle-btn" class="shuffle-button">สุ่มโต๊ะใหม่ (Shuffle)</button>
+            <div>
+                <button id="shuffle-btn" class="shuffle-button">สุ่มโต๊ะใหม่ (Shuffle)</button>
+                <button id="clear-cache-btn" class="clear-cache-button">ล้างข้อมูลและเริ่มใหม่</button>
+            </div>
         </header>
 
         <div id="timeslot-dashboard-container" class="dashboard-container">
