Update After Deploy

--- a/public/staff.html
+++ b/public/staff.html
@@ -56,6 +56,9 @@
             <div id="staff-modal-body"></div>
         </div>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
     
     <script src="data.js"></script>
     <script src="staff.js"></script>
