--- a/public/admin.html
+++ b/public/admin.html
@@ -20,6 +20,9 @@
             <canvas id="score-chart"></canvas>
         </div>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
+
     <script src="data.js"></script>
     <script src="admin.js"></script>
 </body>
