--- a/public/interviewer.html
+++ b/public/interviewer.html
@@ -45,6 +45,10 @@
         </div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
+
+
     <script src="data.js"></script>
     <script src="interviewer.js"></script>
 </body>
