--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
 <body>
     <div class="menu-container">
         <h1>Registration System</h1>
-        <a href="/staff.html">Staff Control Panel</a>
-        <a href="/interviewer.html">Interviewer Page</a>
-        <a href="/admin.html">Admin Dashboard</a>
+        <a href="staff.html">Staff Control Panel</a>
+        <a href="interviewer.html">Interviewer Page</a>
+        <a href="admin.html">Admin Dashboard</a>
     </div>
 </body>
 </html>
