--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <div class="menu-container">
         <h1>Registration System</h1>
         <a href="staff.html">Staff Control Panel</a>
-        <a href="public/interviewer.html">Interviewer Page</a>
+        <a href="interviewer.html">Interviewer Page</a>
         <a href="admin.html">Admin Dashboard</a>
     </div>
 </body>
