--- a/public/interviewer.html
+++ b/public/interviewer.html
@@ -20,6 +20,7 @@
                     <option value="6">โต๊ะ 6</option>
                     <option value="7">โต๊ะ 7</option>
                     <option value="8">โต๊ะ 8</option>
+                    <option value="9">โต๊ะ 9</option>
                 </select>
                 <button id="confirm-table-btn">ยืนยัน</button>
             </div>
