--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
         <a href="staff.html">Staff Control Panel</a>
         <a href="interviewer.html">Interviewer Page</a>
         <a href="admin.html">Admin Dashboard</a>
+        <a href="schedule.html">Schedule Overview</a>
     </div>
 </body>
 </html>
